--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.2.3
 certifi==2019.11.28
+dj-database-url==0.5.0
 Django==3.0.3
+django-chartjs==2.0.0
 django-crispy-forms==1.8.1
 django-debug-toolbar==2.2
+django-heroku==0.3.1
+psycopg2==2.8.4
+python-dotenv==0.11.0
 pytz==2019.3
 sqlparse==0.3.0
-django-chartjs
+whitenoise==5.0.1
