--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-chartjs==2.0.0
 django-crispy-forms==1.8.1
 django-debug-toolbar==2.2
 django-heroku==0.3.1
+gunicorn==20.0.4
 psycopg2==2.8.4
 python-dotenv==0.11.0
 pytz==2019.3
