--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.3
 certifi==2019.11.28
+coverage==5.0.3
 dj-database-url==0.5.0
 Django==3.0.3
 django-chartjs==2.0.0
@@ -11,5 +12,8 @@ Pillow==7.0.0
 psycopg2==2.8.4
 python-dotenv==0.11.0
 pytz==2019.3
+reportlab==3.5.34
+selenium==3.141.0
 sqlparse==0.3.0
+urllib3==1.25.8
 whitenoise==5.0.1
