--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gunicorn==20.0.4
 Pillow==7.0.0
 psycopg2==2.8.4
 pycodestyle==2.5.0
+pylibmc==1.6.1
 python-decouple==3.3
 python-dotenv==0.11.0
 pytz==2019.3
