setup project for caprover

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
+argon2-cffi==18.1.0
 asgiref==3.2.3
 autopep8==1.4.4
 certifi==2019.11.28
 coverage==5.0.3
+direnv==2019.4.13
 dj-database-url==0.5.0
 Django==3.0.3
+django-appconf==1.0.1
 django-chartjs==2.0.0
 django-crispy-forms==1.8.1
 django-debug-toolbar==2.2
+django-environ==0.4.4
 django-heroku==0.3.1
+django-image-cropping==1.1.0
+django-model-utils==3.1.1
+easy-thumbnails==2.5
+env-file==2019.4.13
 gunicorn==20.0.4
 Pillow==7.0.0
 psycopg2==2.8.4
+psycopg2-binary==2.8.5
+public==2019.4.13
 pycodestyle==2.5.0
 pylibmc==1.6.1
 python-decouple==3.3
@@ -20,4 +30,5 @@ reportlab==3.5.34
 selenium==3.141.0
 sqlparse==0.3.0
 urllib3==1.25.8
+values==2019.4.13
 whitenoise==5.0.1
