--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ easy-thumbnails==2.5
 env-file==2019.4.13
 gunicorn==20.0.4
 Pillow==7.0.0
-psycopg2==2.8.5 --no-binary psycopg2
+psycopg2-binary
 public==2019.4.13
 pycodestyle==2.5.0
 pylibmc==1.6.1
